samples/_failures_safe/1761319354_0c4070_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa4f7a83.c: In function ‘main’:
./samples/SAFE/__tmp_aa4f7a83.c:168:13: error: expected declaration or statement at end of input
  168 |             case 1:
      |             ^~~~
./samples/SAFE/__tmp_aa4f7a83.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa4f7a83.c:168:13: error: expected declaration or statement at end of input
